# Diapasonix

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  config.h  directional_switch.c  directional_switch.h  flash.c  flash.h  fretboard.c  fretboard.h  global_distortion.c  global_distortion.h  global_filter.c  global_filter.h  main.c  multicore_audio.c  multicore_audio.h  state_data.c  state_data.h  touch.c  touch.h
audio/: LICENSE  audio_buffer.c  audio_buffer.h  audio_i2s.c  audio_i2s.h  audio_i2s.pio
display/: display.c  display.h  display_strings.h  icon_dx7.h  icon_juno_6.h  intro.h  midi_note_names.h  patch_names.h  ui_items.c  ui_items.h
hardware/enclosure/: Diapasonix.scad  body.scad  fret.scad  fret_cover.scad  headers_cover.scad  navigation_switch_cap.scad  shell.scad  top.scad  top_padding.scad  tray.scad
inc/tinyusb-midi/: tusb_config.h  usb_descriptors.c
lib/amy/: CMakeLists.txt
